tests/NormalTests/paczka1/fuzzy1/42904537.err
Error in line 2: S287 S287 57,9
Error in line 5: bDU S273 717,5
Error in line 3: ko4A4cuIl A365 81,0
Error in line 12: bDU S997 46,3
Error in line 7: BjO1i2P4 S273 87,9
Error in line 22: BjO1i2P4 S997 -4,7
Error in line 24: ko4A4cuIl S273 c1,7
Error in line 18: S287 A365 87,4
Error in line 27: sCZ A365 61,9
Error in line 28: ko4A4cuIl S273 191,8
